--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "mysql2": "^3.1.2",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1"
   }
 }
