--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
+    "moment": "^2.29.4",
     "mysql2": "^3.1.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
